Revert "Merge branch 'master' of github.dbg.westfield.com:digital/customer_console"
This reverts commit 92d3c050025eade601a1530fca0a919fde4b1830, reversing
changes made to 36a72d92d908a53199a6978c6cb0d8ed7a714776.

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -18,7 +18,7 @@
     <%# Store name and closing time %>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-truncate"><%%- name %></em>
-      <!--p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time></p-->
+      <p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time></p>
     </div>
     <%# //Store name and closing time %>
 
