remove old unnecessary toggle-children attribute

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -67,7 +67,7 @@
     <div class="drop-down-menu drop-down-container">
 
       <%# Drop down trigger (narrow view) %>
-      <button type="button" ng-click="showFilterButtons" toggle-visibility="filters" data-toggle-children="li" class="filters__hide-wide drop-down-menu__trigger btn btn--main btn--main-white btn--pointer btn--pointer-padding-med">
+      <button type="button" ng-click="showFilterButtons" toggle-visibility="filters" class="filters__hide-wide drop-down-menu__trigger btn btn--main btn--main-white btn--pointer btn--pointer-padding-med">
         Filter
         <span class="icon icon--lrg icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
       </button>
