--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -38,7 +38,11 @@
 
   <%= javascript_include_tag "vendor/modernizr.min" %>
 
-  <%= render 'shared/oldie' %>
+  <%# Old IE HTML5 shiv (IE < 9) %>
+  <!--[if (lt IE 9) & (!IEMobile)]>
+    <%= javascript_include_tag "html5shiv/src/html5shiv-printshiv.js" %>
+  <![endif]-->
+  <%# //Old IE HTML5 shiv (IE < 9) %>
 
   <%# IE 10+ tile icon: http://blogs.msdn.com/b/ie/archive/2012/06/08/high-quality-visuals-for-pinned-sites-in-windows-8.aspx %>
   <meta name="msapplication-TileColor" content="#da291c">
