fix up typo with missing curly braces

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -89,7 +89,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('category')" aria-haspopup="true" aria-expanded="{{activeFilter === 'category'" aria-controls="filters-category" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('category')" aria-haspopup="true" aria-expanded="{{activeFilter === 'category'}}" aria-controls="filters-category" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
               {{ search.categories.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
