--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -66,7 +66,7 @@
                 <%# //Store level %>
 
                 <%# Store closing time %>
-                <%- if @store.closing_time.present? %>
+                <%- if @store.closing_time.present? and !@store.closed_today? %>
                   <dt class="hide-visually">Opening hours</dt>
                   <dd class="storefront__details__meta__no-indent">Open till <time datetime="<%= @store.closing_time %>"><%= twelve_hour_format @store.closing_time %></time> tonight</dd>
                 <%- else %>
