--- a/app/assets/stylesheets/old-ie.scss
+++ b/app/assets/stylesheets/old-ie.scss
@@ -1,11 +1,9 @@
+/* ======================================================================================
+   @OLDIE STYLESHEET
+   ====================================================================================== */
+
 /*
-======================================================================================
-
-Old IE (IE < 9) stylesheet
-
-Refer to the intro comment in 'application.scss'.
-
-======================================================================================
+  Refer to the intro comment in 'application.scss'.
 */
 
 /* [VARS]
