--- a/app/assets/stylesheets/server_errors.scss
+++ b/app/assets/stylesheets/server_errors.scss
@@ -1,11 +1,9 @@
+/* ======================================================================================
+   @SERVER ERRORS STYLESHEET
+   ====================================================================================== */
+
 /*
-======================================================================================
-
-Server Error stylesheet
-
-This stylesheet is for styling the server error pages e.g. 404 error.
-
-======================================================================================
+  This stylesheet is for styling the server error pages e.g. 404 error.
 */
 
 /* [IMPORT PARTIALS]
